[CRD iOS] Add enum string name for OS::OTHER

We got some crash reports happened when the user tries to send a
feedback during a session. Looks like their host os is OTHER, which is
not mapped to a string and crashes the app.

It's unsure when will the host OS be OTHER. Let's just add back the
mapping for now.

Bug: 831956
Change-Id: I2bf285955a266ab61aae4dfc525b5185546c9109
Reviewed-on: https://chromium-review.googlesource.com/1010969
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550355}
Former-commit-id: f55e65e97dcc0d0e3b62afa80ffdf324f04dc386